删除登陆日志
